mudança na ideia geral

--- a/index.html
+++ b/index.html
@@ -10,15 +10,7 @@
 <body>
     <header class="navbar navbar-expand-lg sticky-top">
         <div class="container">
-            <h1 class="navbrand">Bikeiros Love Night</h1>
-            <!-- <ul class="mountainRoad">
-                <li class="btn mountain">
-                    <a class="fw-bold" href="" role="button">Mountain</a>
-                </li>
-                <li class="btn road">
-                    <a class="fw-bold" href="" role="button">Road</a>
-                </li>
-            </ul> -->
+            <h1 class="navbrand">Bicicletas de montanha</h1>
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navegacao">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,10 +20,10 @@
                         <a class="nav-link active" href="#sobre">Sobre</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#equipamentos">Equipamentos</a>
+                        <a class="nav-link" href="#beneficios">Benefícios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#membros">Membros</a>
+                        <a class="nav-link" href="#equipamentos">Equipamentos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contato">Contato</a>
@@ -42,49 +34,21 @@
     </header>
     <section id="sobre">
         <div class="container-fluid container-lg">
-            <div class="carousel slide" data-bs-ride="carousel" id="bikeirosCarousel">
+            <div class="carousel slide" data-bs-ride="carousel" id="carouselMain">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="0" class="active"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="1"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="2"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="3"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="4"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="5"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="6"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="7"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="8"></button>
-                    <button type="button" data-bs-target="#bikeirosCarousel" data-bs-slide-to="9"></button>
+                    <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="0" class="active"></button>
+                    <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="1"></button>
+                    <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="2"></button>
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block w-100" src="./images/carousel/inicio.jpg" alt="">
+                        <img class="d-block w-100" src="./images/carousel1.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/meio.jpg" alt="">
+                        <img class="d-block w-100" src="./images/carousel2.jpg" alt="">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/fim.jpg" alt="">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/inicio2.jpg" alt="">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/meio2.jpg" alt="">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/fim2.jpg" alt="">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/inicio3.jpg" alt="">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/meio3.jpg" alt="">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/fim3.jpg" alt="">
-                    </div>
-                    <div class="carousel-item">
-                        <img class="d-block w-100" src="./images/carousel/fim4.jpg" alt="">
+                        <img class="d-block w-100" src="./images/carousel3.jpg" alt="">
                     </div>
                 </div>
                 <button type="button" class="carousel-control-prev" data-bs-target="#bikeirosCarousel" data-bs-slide="prev">
@@ -96,12 +60,46 @@
             </div>
             <div class="row">
                 <div class="col-lg-4">
-                    <img class="d-block w-100" src="./images/sobre.jpg" alt="">
+                    <img id="teste" class="d-block w-100" src="./images/sobre.jpg" alt="">
                 </div>
                 <div class="col-lg-8">
-                    <h2>Os Love Night</h2>
+                    <h2>Sobre as bicicletas de montanha</h2>
                     <p>
-                        O “Bikeiros Love Night” é um clube de ciclismo que começou como um grupo de amigos que gostavam de uma famosa casa noturna. Com o tempo, eles se tornaram profissionais e agora estão procurando voltar à forma. A maioria de seus memmbros estão fora de forma e enferrujados. Eles costumavam pedalar regularmente e planejar rotas desafiadoras para manter o interesse e a motivação, mas agora eles estão pensando mais em passear. Se quiser conhecer mais sobre os Love Night, tente encontrá-los na Rodobanha!
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum voluptatem esse quos explicabo repellendus odit deleniti praesentium dicta nobis fuga sit distinctio ea, architecto itaque dolorem eaque aperiam natus. Architecto.
+                    </p>
+                    <h3>Sobre os benefícios</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime a modi architecto voluptates maiores impedit ratione odio, velit exercitationem, repudiandae accusantium labore veritatis. Quidem placeat incidunt, repellat sint possimus consequatur.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="beneficios">
+        <div class="container-fluid container-lg">
+            <div class="row">                
+                <h2>Benefícios de pedalar</h2>
+            </div>
+            <div class="row">
+                <div class="col-md-4">
+                    <img class="d-block w-100" src="./images/card1.jpg" alt="">
+                    <h3>Disposição</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam adipisci, sed animi, incidunt itaque, atque cupiditate vel hic assumenda ratione dolorum eveniet modi in. Tempore hic nulla quo esse at.
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img class="d-block w-100" src="./images/card2.jpg" alt="">
+                    <h3>Respiração</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam quibusdam minima velit exercitationem quis voluptates est, repellat recusandae, voluptas iusto id ad beatae quia esse? Sit quaerat non obcaecati in!
+                    </p>
+                </div>
+                <div class="col-md-4">
+                    <img class="d-block w-100" src="./images/card3.jpg" alt="">
+                    <h3>Alegria</h3>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi earum asperiores provident dolor nesciunt minima, sit repellendus obcaecati vitae iusto hic? Explicabo aperiam nisi ab non voluptatibus corrupti laborum odit!
                     </p>
                 </div>
             </div>
@@ -109,65 +107,23 @@
     </section>
     <section id="equipamentos">
         <div class="container-fluid container-lg">
-            <h2>Guia das bikes</h2>
             <div class="row">
-                <div class="col-md-4">
-                    <nav>
-                        <ul>
-                            <li>
-                                <a href="">Tipos de bike</a>
-                            </li>
-                            <li>
-                                <a href="">Equipamentos</a>
-                            </li>
-                            <li>
-                                <a href="">Principais rotas</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
-                <div class="col-md-8">
-                    <div class="row">
-                        <div class="col">
-                            <img src="https://via.placeholder.com/180x180" alt="">
-                            <h3>Iniciantes</h3>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, reiciendis. Adipisicing elit. Totam, reiciendis.
-                            </p>
-                        </div>
-                        <div class="col">
-                            <img src="https://via.placeholder.com/180x180" alt="">
-                            <h3>Intermediarias</h3>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, reiciendis. Adipisicing elit. Totam, reiciendis.
-                            </p>
-                        </div>
-                        <div class="col">
-                            <img src="https://via.placeholder.com/180x180" alt="">
-                            <h3>Avançadas</h3>
-                            <p>
-                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Totam, reiciendis. Adipisicing elit. Totam, reiciendis.
-                            </p>
+                <h2>Equipamentos</h2>
+            </div>
+            <aside class="col-md-2">
+                <nav class="nav nav-pills flex-column">
+                    <button type="button" class="nav-link active" data-bs-toggle="tab" data-bs-target="#">Bicicletas</button>
+                    <button type="button" class="nav-link" data-bs-toggle="tab" data-bs-target="#">Segurança</button>
+                    <button type="button" class="nav-link" data-bs-toggle="tab" data-bs-target="#">Acessórios</button>
+                </nav>
+            </aside>
+            <div class="col-md-10">
+                <div class="tab-content">
+                    <div class="tab-pane">
+                        <div class="row">
+                            <div class="col-md-4"></div>
                         </div>
                     </div>
-                </div>
-            </div></div>
-    </section>
-    <section id="membros">
-        <div class="container-fluid container-lg">
-            <h2>Estrelas</h2>
-            <div class="row">
-                <div class="col">
-                    <img src="https://via.placeholder.com/240x240" alt="">
-                    <h3>Nome do maluco/maluca</h3>
-                </div>
-                <div class="col">
-                    <img src="https://via.placeholder.com/240x240" alt="">
-                    <h3>Nome do maluco/maluca</h3>
-                </div>
-                <div class="col">
-                    <img src="https://via.placeholder.com/240x240" alt="">
-                    <h3>Nome do maluco/maluca</h3>
                 </div>
             </div>
         </div>
