--- a/index.html
+++ b/index.html
@@ -234,21 +234,21 @@
                         <form>
                             <div>
                                 <label for="nome" class="form-label">Nome:</label>
-                                <input class="form-control mb-3" type="text" id="nome" placeholder="Seu nome aqui">
+                                <input class="form-control mb-3" type="text" id="nome" placeholder="Seu nome aqui" required />
                             </div>
                             <div>
                                 <label for="email" class="form-label">Email:</label>
-                                <input class="form-control mb-3" type="email" id="email" placeholder="email@exemplo.com.br">
+                                <input class="form-control mb-3" type="email" id="email" placeholder="email@exemplo.com.br" required/>
                             </div>
                             <div>
-                                <label for="telefone" class="form-label">Telefone:</label>
-                                <input class="form-control mb-3" type="tel" id="telefone" placeholder="Seu número de telefone">
+                                <label for="telefone" class="form-label">Telefone (opcional):</label>
+                                <input class="form-control mb-3" type="tel" id="telefone" placeholder="Seu número de telefone" />
                             </div>
                             <div>
                                 <label for="mensagem" class="form-label">Mensagem:</label>
-                                <textarea class="form-control mb-3" name="mensagem" id="mensagem" rows="3" placeholder="Escreva sua linda mensagem aqui"></textarea>
+                                <textarea class="form-control mb-3" name="mensagem" id="mensagem" rows="3" placeholder="Escreva sua linda mensagem aqui" required></textarea>
                             </div>
-                                <button type="button" class="btn fw-bold">Enviar</button>
+                                <button type="submit" class="btn fw-bold">Enviar</button>
                         </form>
                     </div>
                     <div class="col-lg-5 pt-5">
@@ -279,5 +279,8 @@
         </section>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <script src="./lib/jquery.mask.min.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
